# rainbow-non-fungible-token-connector

./: .gitignore  README.md
.github/workflows/: node_test_runner.yml
ERC721Locker/: .env.example  config.json  hardhat.config.ts  package.json  tsconfig.json
ERC721Locker/contracts/: ERC721Locker.sol  Locker.sol
ERC721Locker/test/: ERC721Locker.test.ts
EVMFactory/: hardhat.config.ts  package.json
EVMFactory/contracts/: BridgedNFT.sol  NFTFactory.sol
EVMFactory/test/: NFTFactory.test.ts
bridged-nft/: Cargo.toml  build.sh
bridged-nft-token/: Cargo.toml  build.sh
bridged-nft-token-old/src/: internal.rs  lib.rs  mint.rs  nft_core.rs
bridged-nft-token/src/: lib.rs  mint.rs
bridged-nft/src/: lib.rs
bridged-nft/tests/sim/: main.rs
erc721-locker/: README.md  hardhat.config.js  package.json
erc721-locker/contracts/: ERC721Locker.sol  Locker.sol  NearAccessControls.sol  NearUpgradeableProxy.sol  StringToUint256.sol
erc721-locker/deploy/: 001_erc721_locker.ts
erc721-locker/scripts/: 1_deploy_locker.js  2_deploy_access_controls.js  3_deploy_proxy_to_locker.js  extract.ts  x_deploy_mock_nft.js
erc721-locker/test/: AccessControls.test.js  ERC721Locker.test.js  ERC721Locker.test.ts  NearUpgradeableProxy.test.js  StringToUint256.test.js  TransparentUpgradeableProxy.test.js  proof1.json
erc721-metadata/contracts/: ERC721MetadataLogger.sol
erc721-metadata/test/: ERC721MetadataLogger.test.js
evm_bridged_nft/: package.json
evm_bridged_nft/contracts/: BridgedNFT.sol
evm_nft_factory/: .eslintrc.js  package.json
mock-nft/: Cargo.toml  build.sh
mock-prover/: Cargo.toml
near-locker/: Cargo.toml
near-metadata/: Cargo.toml  build.sh
near-metadata/src/: lib.rs
near-metadata/tests/sim/: main.rs
near2evm_nft/: hardhat.config.ts  package.json  proof.json  tsconfig.json
near_Locker/: Cargo.toml  build.sh
near_locker/: Cargo.toml
nft-token-factory/: Cargo.toml  build.sh
res/: BridgedERC721.full.abi  ERC721.full.abi  ERC721Factory.full.abi  ERC721Locker.full.abi  Locker.full.abi  bridge_nft.wasm  bridged_nft.wasm  mock_nft.wasm  mock_prover.wasm  near_locker.wasm  near_metadata.wasm  nft_token_factory.wasm
(+26 files in other folders)
