[package]
name = "near-metadata"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1"
near-contract-standards = "3.1"
serde = { version = "1.0.70", features = ["derive"] }

[dev-dependencies]
near-sdk-sim = "3.1.0"