[package]
name = "near-metadata"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1"
near-contract-standards = "3.1"
admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "9ffb08e6613788096f26636f695b4c7e5fa5b261" }
eth-types = { git = "https://github.com/near/rainbow-bridge", rev = "9ffb08e6613788096f26636f695b4c7e5fa5b261" }
hex = "0.4.2"
serde = { version = "1.0.70", features = ["derive"] }
uint = { version = "0.8.3", default-features = false }
ethabi = "12.0.0"
serde_json = "1.0.64"
tiny-keccak = "1.4.0"
rlp = "0.4.2"

[dev-dependencies]
near-sdk-sim = "3.1.0"
mock-nft = { path = "../mock-nft" }
near-metadata = { path = "../near-metadata" }
